--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -201,6 +201,10 @@
             class="@(ViewContext.RouteData.Values["Action"]?.ToString() == "Students" ? "active" : "")">
                 <i class="bi bi-mortarboard-fill"></i> Students
             </a>
+            <a asp-controller="Admin" asp-action="Subjects"
+            class="@(ViewContext.RouteData.Values["Action"]?.ToString() == "Subjects" ? "active" : "")">
+                <i class="bi bi-book-fill"></i> Subjects
+            </a>
             <a asp-controller="Admin" asp-action="Users"
             class="@(ViewContext.RouteData.Values["Action"]?.ToString() == "Users" ? "active" : "")">
                 <i class="bi bi-people-fill"></i> Users
